--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         with:
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           commit_message: Update generated README
           branch: master
           commit_user_name: readme-scribe 🤖
