--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,12 +21,19 @@ jobs:
         with:
           template: "templates/README.md.tpl"
           writeTo: "README.md"
+          
+      - uses: muesli/readme-scribe@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        with:
+          template: "templates/BRIEF.md.tpl"
+          writeTo: "BRIEF.md"
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         env:
           GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         with:
-          commit_message: Update README
+          commit_message: Update data
           branch: main
           commit_user_name: pranjals bot 🤖
           commit_user_email: actions@github.com
